--- a/PhotoJournalApp/Supporting Files/Base.lproj/Main.storyboard
+++ b/PhotoJournalApp/Supporting Files/Base.lproj/Main.storyboard
@@ -79,6 +79,9 @@
                                     <barButtonItem title="Item" image="icons8-plus_math" id="tmM-Ln-ctm">
                                         <connections>
                                             <action selector="addImageButtonPressed:" destination="BYZ-38-t0r" id="NoW-dO-DeF"/>
+                                            <segue destination="6K0-Jp-Aea" kind="popoverPresentation" popoverAnchorBarButtonItem="tmM-Ln-ctm" id="ebg-IY-4iV">
+                                                <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                            </segue>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="L1N-K8-0PM"/>
@@ -116,47 +119,67 @@
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="129.91071428571428"/>
         </scene>
-        <!--View Controller-->
+        <!--Upload Post Controller-->
         <scene sceneID="r2p-1K-2oK">
             <objects>
-                <viewController id="6K0-Jp-Aea" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="UploadPostController" id="6K0-Jp-Aea" customClass="UploadPostController" customModule="PhotoJournalApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ycl-AX-s70">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" keyboardDismissMode="onDrag" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="VTQ-Tx-y4G">
-                                <rect key="frame" x="0.0" y="475" width="414" height="227"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
-                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
-                            </textView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.pencil" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Aij-gi-o9W">
-                                <rect key="frame" x="0.0" y="43.5" width="414" height="433"/>
-                            </imageView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b5I-PR-VzU">
-                                <rect key="frame" x="0.0" y="818" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b5I-PR-VzU">
+                                <rect key="frame" x="0.0" y="759" width="414" height="49"/>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="edl-Qa-fcN"/>
-                                    <barButtonItem title="Item" image="icons8-upload" id="R8C-kq-Re8"/>
+                                    <barButtonItem title="Item" image="icons8-upload" id="R8C-kq-Re8">
+                                        <connections>
+                                            <action selector="accessPhotoLibraryPressed:" destination="6K0-Jp-Aea" id="9lU-nz-bEW"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="PKW-Sr-sd7"/>
-                                    <barButtonItem title="Item" image="icons8-slr_camera" id="2tQ-iT-10f"/>
+                                    <barButtonItem title="Item" image="icons8-slr_camera" id="2tQ-iT-10f">
+                                        <connections>
+                                            <action selector="cameraButtonPressed:" destination="6K0-Jp-Aea" id="uGZ-29-4Ia"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="wQa-I1-OuJ"/>
                                 </items>
                             </toolbar>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="pQl-Zs-PQp">
+                                <rect key="frame" x="0.0" y="1" width="414" height="359"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="361.5" id="zJV-Xs-hY9"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do " textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="VTQ-Tx-y4G">
+                                <rect key="frame" x="20" y="369.5" width="374" height="188"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="188" id="OG4-Kv-SsW"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="Aij-gi-o9W" firstAttribute="top" secondItem="6xu-He-LQN" secondAttribute="top" id="9Kg-Q2-fkV"/>
-                            <constraint firstItem="Aij-gi-o9W" firstAttribute="trailing" secondItem="6xu-He-LQN" secondAttribute="trailing" id="Coc-au-L4R"/>
-                            <constraint firstItem="Aij-gi-o9W" firstAttribute="height" secondItem="Ycl-AX-s70" secondAttribute="height" multiplier="0.484375" id="Fmx-X9-bLn"/>
-                            <constraint firstItem="Aij-gi-o9W" firstAttribute="leading" secondItem="6xu-He-LQN" secondAttribute="leading" id="n5D-TQ-UIA"/>
+                            <constraint firstItem="pQl-Zs-PQp" firstAttribute="leading" secondItem="6xu-He-LQN" secondAttribute="leading" id="1aL-Fn-bcJ"/>
+                            <constraint firstItem="b5I-PR-VzU" firstAttribute="bottom" secondItem="6xu-He-LQN" secondAttribute="bottom" id="3ap-GU-uZE"/>
+                            <constraint firstItem="b5I-PR-VzU" firstAttribute="trailing" secondItem="6xu-He-LQN" secondAttribute="trailing" id="OdT-fA-Sdh"/>
+                            <constraint firstItem="6xu-He-LQN" firstAttribute="trailing" secondItem="VTQ-Tx-y4G" secondAttribute="trailing" constant="20" id="Wh2-Qc-jvk"/>
+                            <constraint firstItem="pQl-Zs-PQp" firstAttribute="trailing" secondItem="6xu-He-LQN" secondAttribute="trailing" id="cjq-7G-cOV"/>
+                            <constraint firstItem="VTQ-Tx-y4G" firstAttribute="top" secondItem="pQl-Zs-PQp" secondAttribute="bottom" constant="8" id="d9c-nd-m8I"/>
+                            <constraint firstItem="VTQ-Tx-y4G" firstAttribute="leading" secondItem="6xu-He-LQN" secondAttribute="leading" constant="20" id="tkL-YB-SGM"/>
+                            <constraint firstItem="pQl-Zs-PQp" firstAttribute="top" secondItem="6xu-He-LQN" secondAttribute="top" id="ydn-MH-8JO"/>
+                            <constraint firstItem="b5I-PR-VzU" firstAttribute="leading" secondItem="6xu-He-LQN" secondAttribute="leading" id="ygb-C4-rqi"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6xu-He-LQN"/>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="pQl-Zs-PQp" id="Lwx-rn-QH2"/>
+                        <outlet property="textView" destination="VTQ-Tx-y4G" id="zj0-Hg-fXV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e0B-An-jaS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -168,6 +191,6 @@
         <image name="icons8-plus_math" width="25" height="25"/>
         <image name="icons8-slr_camera" width="25" height="25"/>
         <image name="icons8-upload" width="25" height="25"/>
-        <image name="square.and.pencil" catalog="system" width="64" height="58"/>
+        <image name="photo" catalog="system" width="64" height="46"/>
     </resources>
 </document>
